changed the HTML and added notes to HTML and CSS

--- a/03-JavaScript_02-Homework_Develop_index.html
+++ b/03-JavaScript_02-Homework_Develop_index.html
@@ -14,7 +14,10 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Generate a Password!</h2>
+        </div>
+        <div class="card-footer">
+          <button id="generate" class="btn">Click Here to Generate Password!</button> <!--Changed text of button and moved it above the box it made more logical sense to me the way the display was layed out-->
         </div>
         <div class="card-body">
           <textarea
@@ -23,9 +26,6 @@
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
