--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="03-JavaScript_02-Homework_Develop_style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="03-JavaScript_02-Homework_Develop_script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
